--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Sep 09 19:50:24 KST 2019
+#Mon Sep 09 19:52:30 KST 2019
+>>>>>>>=kungkungdda
 sdk.dir=/Users/wlswnwns/Library/Android/sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
