--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,7 @@
             android:supportsRtl="true"
             android:theme="@style/Noactionbar">
         <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait"
-
-        >
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
