--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ gen/
 # Ignore gradle files
 .gradle/
 build/
+app/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -37,4 +38,4 @@ proguard/
 Thumbs.db
 
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
-**/.idea/
+.idea/
