--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:supportsRtl="true"
             android:theme="@style/Noactionbar">
         <activity android:name=".MainActivity"
-                  android:screenOrientation="portrait">
+                  android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustNothing">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
